LPS-106445 Limit maximum editor icon width to avoid overlapping in the RTL languages

--- a/modules/apps/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/portal/_editor_alloy.scss
+++ b/modules/apps/frontend-css/frontend-css-web/src/main/resources/META-INF/resources/portal/_editor_alloy.scss
@@ -61,6 +61,7 @@
 
 			~ .alloy-editor-icon {
 				display: block;
+				max-width: 24px;
 			}
 		}
 
